Edit of json reading and the validations and exceptions logic has been implemented.