@@ -3,6 +3,7 @@ package respositorio;
 import modelo.Proveedor;
 import org.json.JSONArray;
 import org.json.JSONObject;
+import servicio.Logs;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -18,21 +19,26 @@ public class ProveedorJson implements ILectorJson<Proveedor> {
     public ProveedorJson() {
         String contenidoArchivo = "";
         try {
-            contenidoArchivo = new String(Files.readAllBytes(
-                    Paths.get(ruta)), StandardCharsets.UTF_8
+            contenidoArchivo = new String(Files.readString(
+                    Paths.get(ruta))
             );
+            JSONArray jsonArray = new JSONArray(contenidoArchivo);
+            for (Object obj : jsonArray) {
+                JSONObject jsonObject = (JSONObject) obj;
+                try {
+                    // Puede ocurrir la excepción
+                    String nombre = jsonObject.getString("nombre");
+                    double precioEnvio = jsonObject.getDouble("precioEnvio");
+
+                    Proveedor proveedor = new Proveedor(nombre, precioEnvio);
+                    listaProveedores.add(proveedor);
+                } catch (Exception e) {
+                    Logs.getInstance().nuevoLog("Error al leer un proveedor del archivo JSON [ " + e.getMessage() + " ]");
+                }
+            }
         } catch (IOException e) {
-            System.out.println("Error al leer el archivo JSON de proveedores: " + e.getMessage());
-        }
-
-        JSONArray jsonArray = new JSONArray(contenidoArchivo);
-        for (int i = 0; i < jsonArray.length(); i++) {
-            JSONObject jsonObject = jsonArray.getJSONObject(i);
-            String nombre = jsonObject.getString("nombre");
-            double precioEnvio = jsonObject.getDouble("precioEnvio");
-
-            Proveedor proveedor = new Proveedor(nombre, precioEnvio);
-            listaProveedores.add(proveedor);
+            // Mensaje no en Log ya que el usuario requiere saber qué ha pasado en el programa.
+            Logs.getInstance().nuevoLog("Error al leer el archivo JSON de proveedores: " + e.getMessage() + ".");
         }
     }
 
